<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/colorBackground"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="56dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginHorizontal="25dp"
                    android:weightSum="5">

                    <TextView
                        android:id="@+id/info-edit-user"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@string/info_edit_user"
                        android:layout_weight="4"/>

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/toggle-edits"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:layout_weight="1"/>

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColorHint="@color/colorAccent"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user-email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/input_email"
                        android:textCursorDrawable="@null"
                        android:enabled="false"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_branch"
                    android:textColorHint="@color/colorAccent"
                    app:boxStrokeColor="@color/colorAccent"
                    app:hintTextColor="@color/colorAccent"
                    app:endIconTint="@color/colorTextDark"
                    >

                    <AutoCompleteTextView
                        android:id="@+id/user-branch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:editable="false"
                        android:enabled="false"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/button-reset-password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_default"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/reset_password"
                    android:enabled="false"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button"
                    android:id="@+id/button-save-changes"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height_default"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/save_changes"
                    android:enabled="false"/>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:labelVisibilityMode="labeled"
        />

</RelativeLayout>